Terraform/subnet.tf
# Create public Subnet #1 
resource "aws_subnet" "subnet01" {
  vpc_id                  = aws_vpc.vpc-project.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "Subnet 01"
  }
}

# Create public subnet #2
resource "aws_subnet" "subnet02" {
  vpc_id                  = aws_vpc.vpc-project.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "Subnet 02"
  }
}
